<?xml version="1.0"?>
<package format="3">
  <name>target_localization</name>
  <version>0.1.0</version>
  <description>Realtime target localization with ultrasound + NDI Polaris.</description>

  <maintainer email="zuo-kewei@g.ecc.u-tokyo.ac.jp">ZUO</maintainer>
  <license>MIT</license>

  <!-- 构建类型：纯 Python 包 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 运行依赖（来自文档中的话题/消息/同步与图像处理流程） -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <depend>target_localization_msgs</depend>

  <!-- Python 运行依赖（系统包名可能因发行版不同而异；也可改为用 pip 安装） -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <!-- 安装与测试 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

