<?xml version="1.0"?>
<package format="3">
  <name>target_localization_msgs</name>
  <version>0.1.0</version>
  <description>Custom messages for target localization + stability index (sk).</description>

  <maintainer email="zuo-kewei@g.ecc.u-tokyo.ac.jp">Kun</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

